# SCEPCAL

./: .gitignore  CMakeLists.txt  README.md  SCEPCALanalysis.ipynb  dd4hep_steering_file.py  dd4hep_steering_template.py  edm4dr.yaml  init_k4.sh  init_sipm.sh  scepcal_steering.py  setupSCEPCAL.sh
Detector/: CMakeLists.txt
Detector/SCEPCAL/: CMakeLists.txt
Detector/SCEPCAL/compact/: SCEPCAL.xml  SCEPCAL_10cm.xml  SCEPCAL_ced.xml  SCEPCAL_eve.xml  SCEPCAL_materials.xml  SCEPCAL_matprops.xml  SCEPCAL_properties.xml  SCEPCAL_wo_display.xml  materials.xml
Detector/SCEPCAL/src/: SCEPCALConstructor.cpp  TimingLayerConstructor.cpp
Detector/SCEPCAL_Gaudi_GeoSvc/: CMakeLists.txt
Detector/SCEPCALsegmentation/include/: SCEPCALSegmentation.h  SCEPCALSegmentationHandle.h
Detector/SCEPCALsegmentation/src/: SCEPCALSegmentation.cpp  SegmentationFactories.cpp
Detector/SCEPCALsensitive/: CMakeLists.txt
Detector/SCEPCALsensitive/include/: ScepcalHit.h  ScepcalSD.h
Detector/SCEPCALsensitive/src/: SDWrapper.cpp  ScepcalHit.cpp  ScepcalSD.cpp  ScepcalSDAction.cpp
SCEPCALsim/SCEPCALsimG4Components/src/: SimG4SaveSCEPCALHits.cpp
SCEPCALsim/SCEPCALsimG4Full/src/lib/: SimG4SCEPCALSteppingAction.cpp
SCEPCALsimGaudi/SCEPCALsimG4Full/src/components/: SimG4SCEPCALActions.cpp
SCEPCALsimGaudi/SCEPCALsimG4Full/src/lib/: SimG4SCEPCALSteppingAction.cpp
condor_submission/: runSCEPCALsimTemplate.py  submitJobs.py
examples/: gamma_10MeV_d-1-10_BE_noopt_1MeVcut.root  gamma_10MeV_d-100_BE_noopt_1MeVcut.root  gamma_10MeV_d-110_BE_noopt_1MeVcut.root  gamma_10MeV_d0-10_BE_noopt_1MeVcut.root  gamma_10MeV_d001_BE_noopt_1MeVcut.root  gamma_10MeV_d010_BE_noopt_1MeVcut.root  gamma_10MeV_d1-10_BE_noopt_1MeVcut.root  gamma_10MeV_d100_BE_noopt_1MeVcut.root  gamma_10MeV_d110_BE_noopt_1MeVcut.root
python/: SCEPCALanalysis.ipynb
scripts/: SCEPCALsim.sh  scepcal_steering.py
